# bio_asr

./: .gitignore  CMakeLists.txt  package.xml  requirements.txt
data/: README.md
launch/: bio_asr_capture.launch  css133_final.launch  run_vad.launch
msg/: AudioBatch.msg  AudioBatchMetadata.msg  AudioFileNotification.msg  AudioStamped.msg  NotifyFileUsage.msg  Utterance.msg  VoiceActivityMarker.msg
pretrained_models/: README.md
src/: asr_provider.py  audio_batcher.py  audio_display.py  batch_to_tmpfile.py  bio_asr_core.py  bioasr.py  ros_venv_checker.py  speaker_identifier.py  utterance_to_actions.py  vad_provider.py  voice_agent_maintainer.py
src/samples/: asr_demo.py  speaker_identify_demo.py  vad_demo.py
srv/: AddKnownAgent.srv  AppendAudioFile.srv  AsrOnFile.srv  GetKnownAgents.srv  IdentifySpeaker.srv  SaveKnownAgents.srv  SpeakerRecognitionOnFile.srv  VadOnFile.srv
