<?xml version="1.0"?>
<package format="2">
  <name>bio_asr</name>
  <version>0.0.1</version>
  <description>The bio_asr package</description>
  <maintainer email="chris@cthierauf.com">cst0 (Chris Thierauf)</maintainer>

  <license>Apache2.0</license>
  <author email="chris@cthierauf.com">cst0 (Chris Thierauf)</author>


  <depend>message_runtime</depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_virtualenv</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ffmpeg</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>

  <!--
      Python package dependencies

      Commented out because these
      should be getting handled
      by catkin_virtualenv
  -->
  <!--depend>speechbrain</depend>
  <depend>torchaudio</depend>
  <depend>pydub</depend>
  <depend>transformers</depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <pip_requirements>requirements.txt</pip_requirements>
  </export>
</package>
